--- a/ejercicio1/src/components/ProductCard.module.css
+++ b/ejercicio1/src/components/ProductCard.module.css
@@ -1,4 +1,5 @@
 .Container {
+  position: relative;
   width: 100%;
   border: 1px solid white;
   border-radius: 8px;
@@ -16,4 +17,18 @@
 .StatusNotAvailable {
   font-size: 14px;
   color: lightsalmon;
+}
+.Favorite {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  border: 0;
+  background: none;
+  font-size: 20px;
+
+  &:hover {
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+  }
 }
